# valkey-workshops

backend/: .env.template  pyproject.toml
backend/airport/: __init__.py  main.py  workshop_airport.db
backend/tests/: CACHE_INTEGRATION_SUMMARY.md  README.md  TEST_RUNNER_GUIDE.md  __init__.py  demo_leaderboard.py  demo_nested_doll_cache.py  demo_ttl_optimizer.py  run_database_tests.py  run_tests.py  test_cache_demo.py  test_cache_integration.py  test_cache_simple.py  test_database_config.py  test_database_integration.py  test_database_models.py  test_database_simple.py  test_leaderboard_integration.py  test_leaderboard_system.py  test_models.py  test_nested_doll_cache.py  test_query_optimizer_integration.py  test_seat_reservation_integration.py  test_ttl_optimizer.py
cache_me_if_you_can/: .env.example  .gitignore  QUICKSTART.md  README.md  airport_app.py  main.py  pyproject.toml  test_verbose_flag.sh
cache_me_if_you_can/.streamlit/: config.toml
cache_me_if_you_can/core/: README.md  __init__.py  inmemory.py  rdbms.py  semantic_search.py
cache_me_if_you_can/daos/: airport_leaderboard.py  cache_aside.py  nlp_to_sql.py  semantic_cache.py  weather_api_cache.py  write_behind_cache.py  write_through_cache.py
cache_me_if_you_can/data/: .gitignore
cache_me_if_you_can/docs/: .gitignore  MIGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  SEMANTIC_SEARCH_VECTOR_INDEX_FIX.md  WEATHER_API_CACHE_ENHANCEMENTS.md  WEATHER_DEMO_COMPLETE_SUMMARY.md  WEATHER_DEMO_FINAL_SUMMARY.md  WEATHER_DEMO_VERBOSE_MODE.md  WRITE_THROUGH_CACHE_README.md  bug_fixes_flughafendb_large.sql  semantic_search_README.md  valkey-brand.md
cache_me_if_you_can/hands_on/: README.md
cache_me_if_you_can/img/: license_ L3EXTQC8U9.txt
cache_me_if_you_can/knowledge_base/: README.json  airline.json  airplane.json  airplane_type.json  airport.json  airport_geo.json  airport_reachable.json  booking.json  database_schema_overview.json  employee.json  flight.json  flight_log.json  flightschedule.json  nl_sql_examples.json  nl_to_sql_guide.json  passenger.json  passengerdetails.json  query_examples_aggregations.json  query_examples_complex.json  query_examples_joins.json  query_examples_simple.json  query_patterns.json  weatherdata.json
cache_me_if_you_can/models/: __init__.py  airline.py  airplane.py  airport.py  booking.py  employee.py  flight.py  passenger.py  weather.py
cache_me_if_you_can/samples/: 01_simple_queries.sql  02_medium_queries.sql  03_advanced_queries.sql  README.md  US_27526_1763611649.json  cache_aside_demo.py  demo_airport_leaderboard.py  demo_cache_aside.py  demo_multi_threaded_performance.py  demo_semantic_cache.py  demo_semantic_search.py  demo_weather_api_cache.py  (+9 more)
flask_demo/: config.py  main.py  pyproject.toml
workshop/: .env.example  .gitignore  FLIGHT_POPULATION_FIXES.md  README.md  check_flight_distribution.py  pyproject.toml  test_sql_syntax.py
(+262 files in other folders)
