[project]
name = "backend"
version = "0.1.0"
description = "OPN402: Cache me if you can, Valkey edition - A hands-on workshop exploring practical caching with Valkey"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.41.0",
    "sqlalchemy>=2.0.0",
    "valkey>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["airport"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[project.scripts]
workshop = "airport.main:main"
