[project]
name = "cache-me-if-you-can"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "dotenv>=0.9.9",
    "mysql-connector-python>=9.5.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "pymemcache>=4.0.0",
    "pymysql>=1.1.2",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "valkey[libvalkey]>=6.1.1",
    "watchdog>=6.0.0",
]
