[project]
name = "workshop"
version = "0.1.0"
description = "Valkey Caching Workshop with Flughafen DB SQLModel classes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.14",
    "python-dotenv>=1.0.0",
    "pymysql>=1.1.0",
    "psycopg2-binary>=2.9.0",
    "polars>=0.20.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "textual>=0.41.0",
    "rich>=13.0.0",
]
